# permitting-model

./: .gitignore  Cross_case_recovery_timelines.csv  LICENSE  README.md  convergence_plot.ipynb  disaster_to_application_louisville.csv  fit_data.ipynb  halving_review_time_impact.ipynb  permit_simulation.py  plot_median_by_process.py  policy_intervention_stratum_figures.py  policy_lever_impact_analysis.ipynb  pre_application_distribution_curves.ipynb  preapp_distribution_volume_comparison.ipynb  pyproject.toml  repo_paths.py  requirements.txt  run_simulation.ipynb  run_simulation.py  run_simulation_parallel.ipynb  run_simulation_sequential.ipynb  run_simulation_with_ai.ipynb  run_simulation_with_segments.ipynb  run_simulation_with_segments_cases.ipynb  sensitivity_analysis.ipynb  sensitivity_summary_all_combinations_20260414_111224.csv  sensitivity_summary_all_combinations_20260414_111224.xlsx  simulation_plot_helpers.py  timeline_data.ipynb  visualize_permits.py  ~$sensitivity_summary_all_combinations_20260414_111224.xlsx
Data fitting for pre-application timeline/: Cross_case_recovery_timelines.xlsx  Paradise.csv  SantaRosa.csv  disaster_to_application_la.csv  fit_data.ipynb
notebooks/: convergence_plot.ipynb  policy_lever_impact_analysis.ipynb  pre_application_distribution_curves.ipynb  preapp_distribution_volume_comparison.ipynb  run_simulation.ipynb  run_simulation_parallel.ipynb  run_simulation_with_ai.ipynb  run_simulation_with_segments.ipynb  run_simulation_with_segments_cases.ipynb  sensitivity_analysis.ipynb  timeline_data.ipynb  usace_staffing.ipynb
(+3 files in other folders)
