[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "post-disaster-permitting-sim"
version = "1.0.0"
description = "Discrete-event simulation of post-disaster housing permitting and recovery timelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "simpy>=4.0.1",
    "numpy>=1.24.0",
    "matplotlib>=3.5.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
notebooks = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "openpyxl>=3.1.0",
]
dev = [
    "nbstripout>=0.7.0",
]

[tool.setuptools]
py-modules = [
    "permit_simulation",
    "run_simulation",
    "visualize_permits",
    "simulation_plot_helpers",
    "policy_intervention_stratum_figures",
    "plot_median_by_process",
    "repo_paths",
]
